--- a/er/9-outcomes.adoc
+++ b/er/9-outcomes.adoc
@@ -1,14 +1,41 @@
 [[Experiment_Outcomes_Summary]]
 == Summary of experiment and analysis of outcomes
+As described previously, The ELFIE was intended to test existing OGC and W3C
+standards with the goal of establishing a best practice for exposing links
+between and among environmental domain and sampling features. The project
+sought to test existing solutions to linking data on the web with a "just
+enough" semantic annotation approach that would be approachable by developers
+and adoptable existing systems. Many use cases were discussed and a few of them
+were selected for experimental implementation.
 
-=== Introduction
-**Recap goals and experiment design -- what were our expectations that were being tested?**
+All experimental implementations are summarized on the
+https://opengeospatial.github.io/ELFIE/[ELFIE demo pages.] The collection of
+experiments show that existing practices for encoding linked data can be used
+to satisfy the important environmental linked features use cases considered by
+ELFIE. In cases where features and related information were already published
+as linked data or had well established web services, these data and/or service-
+generated representations were easy to incorporate and use. Many of the core
+linked data relations used for search engine optimization were found to be
+suited to typical environmental linked feature use cases.
 
-=== What Worked?
-**Describe standards and best practices that worked as expected.**
+=== Future Work
+The experiments exposed several issues with existing and new technologies
+that need to be addressed to realize the full potential of the core linked
+encoding technologies tested. The issue of representation of a preview geometry
+for a feature should be addressed and seems to be a tractable problem that could
+lead to significant benefits. Another tractable and important issue is creation
+of ontologies for domain features. As of the completion of ELFIE, this work was
+already being undertaken for existing domain models where a UML to OWL conversion
+is possible. Other domain models, such as flood impact features, need to be
+created and or vetted by a community.
 
-=== What Didn't Work?
-**Describe instances where standards and best practices that didn't meet our expectations.**
-
-=== Additional Section?
-**Is more needed here? Maybe what didn't we test that we hoped to?**
+There were also several issues highlighted by the ELFIE that were deemed out of
+scope and purposefully left for future efforts. The foundational issue in this
+category is the "landing page" or "default representation" problem. That is,
+how should we handle the case where a dereferencable URI meant to identify a
+real world entity with multiple digital representations. There are many related
+issues largely related to the network architecture and expected behavior when
+dereferencing URIs. These were generally out of scope for ELFIE but need to
+be addressed to achieve interoperability and include: URI structure,
+use of non-information URIs with WFS and other services, strategies for managing
+collections of potentially temporary linked data among many data providers.
