--- a/er/7-standards.adoc
+++ b/er/7-standards.adoc
@@ -1,4 +1,5 @@
-[[Standards_Best_Practices]] == Applicable Best Practices and Standards
+[[Standards_Best_Practices]] 
+== Applicable Best Practices and Standards
 
 === Introduction
 
