--- a/er/4-overview.adoc
+++ b/er/4-overview.adoc
@@ -1,24 +1,23 @@
-[[Overview]] == Overview
-
-[NOTE] .Instructions ==== This 4-overview.adoc file helps the reader to better
-understand the various sections of the ER. It should be written like an extended
-table of contents.====
+[[Overview]]
+== Overview
 
 // these three paragraphs are fine, but maybe too long?
 
-The ELFIE is intended to test existing OGC and W3C standards with the goal of
+The Environmental Linked Feature Interoperability Experiment (ELFIE) is intended
+to test existing OGC and W3C standards with the goal of
 establishing a best practice for exposing links between and among environmental
 domain and sampling features. The IE is focused on two cross-domain use cases:
 1) encoding topological and domain specific relationships between features
 and 2) description of observations available for and linked to sampled domain
 features. While addressing these use cases, the IE will strive to address issues
-of encoding specific views of a rich linked data graph that would be passed
-between systems. These linked data graph views are expected to support
+of encoding specific (simplified and useful) _views_ of a rich (complete but
+complicated) linked data graph that could be passed
+between systems. These linked data graph _views_ are expected to support
 architectures involving linked data catalogs and registries. For example, data
-providers can use the linked data graph views as a way to advertise their
+providers can use the linked data graph _views_ as a way to advertise their
 monitoring or domain features to catalogs or other applications that want to
 crawl and index available data. Similarly, integrated catalogs that index and
-construct links between features can use the views as a linked data response to
+construct links between features can use the _views_ as a linked data response to
 search queries.
 
 Current OGC services, while flexible and capable, do not allow exposure of
@@ -35,13 +34,15 @@ out of control. To focus the work, the IE attempted to avoid issues not directly
 related to encoding linked data documents as would be passed from server to
 client via http.
 
-As described in detail later, the IE has specified a number of JSON-LD contexts
-that describe useful linked data graph views. JSON-LD documents that rely on
-these contexts could be delivered using the "_view" pattern as described by the
-Linked Data API or as the payload returned from a REST API endpoint. Using this
+As described in detail later, the IE has specified a number of
+https://json-ld.org/[JSON-LD] https://www.w3.org/TR/json-ld/#the-context[contexts]
+that describe useful linked data graph _views_. JSON-LD documents that rely on
+these contexts could be delivered using the `view` pattern as described by the
+https://github.com/UKGovLD/linked-data-api/blob/wiki/API_Query_Parameters.md[Linked Data API]
+or as the payload returned from a REST API endpoint. Using this
 approach, the recommendation takes advantage of the power and flexibility of
 Linked Open Data while providing just enough guidance to foster
-interoperability. By describing a partially resolve useful view of a linked data
+interoperability. By describing a partially resolve useful _view_ of a linked data
 graph, it also allows resources that are important but not yet available as
 formal linked open data to be incorporated into a linked data system. This
 mechanism should provide a gateway to inclusion in and understanding the value
@@ -52,36 +53,37 @@ of the Linked Open Data cloud.
 The experiment conducted in ELFIE tested the assumption that broadly adopted
 web technologies for linked data could be applied to environmental linked
 feature use cases to satisfy the needs of a number of compelling use cases.
-The objectives section describes engineering design goals and details the
+The <<Objectives>> section describes engineering design goals and details the
 assumptions and scope that were used to constrain the magnitude of the IE.
 Much of the IE was a thought experiment among participants where use cases
 were discussed and potential technologies and implementations were explored.
-The use cases section describes these use cases and a select set that were
+The <<Use_Cases>> section describes these use cases and a select set that were
 implemented to more thoroughly test and evolve the technologies that were
 selected during design discussions.
 
 The technologies tested in ELFIE were selected for their adoptability,
 commonality, and suitability to the needs of ELFIE use cases. New and
 thus uncommon domain feature models were applied with the chosen, more common,
-technologies. The standards section is a brief discussion of the technologies
+technologies. The <<Standards_Best_Practices>> section is a brief discussion of the technologies
 and standards tested in ELFIE. The technology chosen to provide a precise
-but not overly prescriptive description of the linked data graph views is
+but not overly prescriptive description of the linked data graph _views_ is
 the JSON-LD context. Details of the contexts defined in the ELFIE project are
-discussed in the contexts section.
+discussed in the <<Relations_Contexts>> section.
 
-The outcomes of ELFIE provide guidance for providing views of environmental
-features. A simple view intended to be a preview, suitable for basic indexing
-is specified. The IE also experimented with views intended to provide
+The outcomes of ELFIE provide guidance for providing _views_ of environmental
+features. A simple _view_ intended to be a preview, suitable for basic indexing
+is specified. The IE also experimented with _views_ intended to provide
 topological as well as observational and domain feature model relationships.
-The preview view was largely successful, but there was no one satisfactory
+The preview _view_ was largely successful, but there was no one satisfactory
 solution for expression of a preview geometry. The experimentation with domain
 feature models led to the conclusion that the underlying linked data
 technologies are mature enough, but progress is still needed on domain feature
 ontologies and publication of domain feature model data using them. These issues
-are discussed in more detail in the outcomes and recommendations sections.
+are discussed in more detail in the <<Experiment_Outcomes_Summary>> and
+<<Issues_Recommendations>> sections.
 
-The ELFIE explored a number of interesting but tangential topics. Annex A
+The ELFIE explored a number of interesting but tangential topics. Annex A: <<ontology_from_uml>>
 is a summary of one important topic discussed; how to generate a feature
-ontology from a UML model. Annex B is a brief discussion of issues related
+ontology from a UML model. Annex B: <<linked_data_default>> is a brief discussion of issues related
 to what the default response should be when resolving a URI for a
 non-information resource that may have multiple representations.
