--- a/er/2-references.adoc
+++ b/er/2-references.adoc
@@ -6,3 +6,13 @@ The following normative documents are referenced in this document.
 .NOTE: 	Only normative standards are referenced here, e.g. OGC, ISO or other SDO standards. All other references are listed in the bibliography. Example:
 
 * https://portal.opengeospatial.org/files/?artifact_id=38867&version=2[OGC 06-121r9, OGC® Web Services Common Standard]
+
+* http://docs.opengeospatial.org/is/14-111r6/14-111r6.html[OGC 14-111r6, OGC® WaterML 2: Part 3 - Surface Hydrology Features (HY_Features) - Conceptual Model]
+
+* http://docs.opengeospatial.org/is/16-032r2/16-032r2.html[OGC 16-032r2, OGC® WaterML 2: Part 4 – GroundWaterML 2 (GWML2)]
+
+* http://docs.opengeospatial.org/is/15-043r3/15-043r3.html[OGC 15-043r3, Timeseries Profile of Observations and Measurements]
+
+* http://docs.opengeospatial.org/is/09-025r2/09-025r2.html[OGC 09-025r2, OGC® Web Feature Service 2.0 Interface Standard – With Corrigendum]
+
+* https://portal.opengeospatial.org/files/?artifact_id=47599[OGC 12-006,	OGC® Sensor Observation Service Interface Standard]
