--- a/er/er.adoc
+++ b/er/er.adoc
@@ -21,7 +21,7 @@
 :publicationDate: YYYY-MM-DD
 :approvalDate: YYYY-MM-DD
 :referenceURL: ID
-:copyrightYear: 2017
+:copyrightYear: 2018
 //
 :titletext: {title}
 :doctype: book
@@ -46,7 +46,7 @@ Posted Date: {postedDate}
 
 Reference number of this document: {docReference}
 
-Reference URL for this document: http://www.opengis.net/doc/PER/t13-{referenceURL}
+Reference URL for this document: http://www.opengis.net/doc/PER/elfie-{referenceURL}
 
 Category: Public Engineering Report
 
