--- a/er/6-usecases.adoc
+++ b/er/6-usecases.adoc
@@ -131,11 +131,11 @@ observational water budget data and related web resources.
 As shown in the <<img_uswb_data>>, the watershed feature is linked to various
 representations of it. This follows the HY_Features concept of a catchment as
 an _unrealized_ feature that is related to various realization features,
-there is no canonical representation of the watershed its self.
+there is no canonical representation of the watershed itself.
 
 [#img_uswb_data,reftext='{figure-caption} {counter:figure-num}']
 .Notional diagram of relationships between data in the water budget summary use case.
-image::images/uswb.png[width=800,align="center"]
+image::images/uswb.png[width=600,align="center"]
 
 Additional details about the water budget summary use case implementation is
 available on the
@@ -149,8 +149,8 @@ network associated with it. It serves as a general demonstration that could
 be used for a wide array of linked watershed information use cases.
 
 [#img_huc12obs_data,reftext='{figure-caption} {counter:figure-num}']
-.Notional diagram of relationships between data in the watershed data index
-use case. image::images/uswb.png[width=800,align="center"]
+.Notional diagram of relationships between data in the watershed data index use case.
+image::images/uswb.png[width=800,align="center"]
 
 Additional details about the water budget summary use case implementation is
 available on the
@@ -161,7 +161,7 @@ page.]
 to respond to flooded transportation infrastructure the information they need
 to understand the impacted assets and flooded roads for a forecast flood.
 Under this use case, a flood forecasting system would be able to discover
-vulnerable infrastructure and assets published by local juridictions as
+vulnerable infrastructure and assets published by local jurisdictions as
 linked data and publish flood forecasts that include potentially impacted
 features in forecast information products.
 
